# ESP32-Gattacker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bad_blues.patch
.github/ISSUE_TEMPLATE/: config.yml  gitlab_redirect.md
Firmware/: CMakeLists.txt  partitions.csv  sdkconfig
Firmware/include/: App.h  LEDStrip.h  settings.h
Firmware/include/ble/: GattAttack.h  GattAttackApp.h  ble.h
Firmware/include/wifi/: routes.h  wifi.h  ws.h
Firmware/main/: App.cpp  CMakeLists.txt  LEDStrip.cpp  idf_component.yml  main.cpp  settings.cpp
Firmware/main/ble/: GattAttack.cpp  GattAttackApp.cpp  ble.c
Firmware/main/wifi/: routes.cpp  wifi.cpp  ws.cpp
UI/: index.html  package-lock.json  package.json  vite.config.js
UI/src/: App.jsx  index.css  main.jsx
UI/src/components/: About.jsx  BLE.jsx  Home.jsx  Settings.jsx  common.jsx
UI/src/components/BLE/: GattAttackApp.jsx  MitmPanel.jsx
